# PersiaPress-AI

./: .env.tmp  .gitignore  README.md  pyproject.toml  run.bat
.cursor/rules/: my-first-rule.mdc
app/: __init__.py  app.py  content_generator.py  file_utils.py  llm_clients.py  ui.py  utils.py  wordpress_handler.py
app/prompts/: blog_thumbnail_image_prompt.txt  human_prompt_analyze_blog.txt  human_prompt_blog_generation.txt  human_prompt_instagram_story_teasers.txt  human_prompt_instagram_texts.txt  human_prompt_iranian_video.txt  instagram_static_image_prompt.txt  instagram_video_prompt.txt  instagram_video_ready_image_prompt.txt  realistic_thumbnail_image_prompt.txt  system_prompt_analyze_blog.txt  system_prompt_blog_generation.txt  system_prompt_instagram_story_teasers.txt  system_prompt_instagram_texts.txt  system_prompt_iranian_video.txt
plugins/Rank-Math-Api-Manager/: rank-math-api-manager-extended-v1.3.php
