[project]
name = "persiapress-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "dotenv>=0.9.9",
    "langchain-core",
    "langchain-openai",
    "markdown>=3.8",
    "streamlit>=1.45.0",
]
